--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coral Social - Connect & Share</title>
-    <meta name="description" content="A warm and welcoming social platform to connect with friends, share moments, and discover new perspectives." />
-    <meta name="author" content="Coral Social" />
 
-    <meta property="og:title" content="Coral Social - Connect & Share" />
-    <meta property="og:description" content="A warm and welcoming social platform to connect with friends and share moments." />
+    <!-- Website Title -->
+    <title>Leeza Sarwar App</title>
+
+    <!-- SEO Meta -->
+    <meta name="description" content="Official web application built by Leeza Sarwar." />
+    <meta name="author" content="Leeza Sarwar" />
+
+    <!-- Open Graph (Facebook / LinkedIn) -->
+    <meta property="og:title" content="Leeza Sarwar App" />
+    <meta property="og:description" content="A modern web application built with love by Leeza Sarwar." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://leezaportfolio.vercel.app/og-image.png" />
 
+    <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@CoralSocial" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <meta name="theme-color" content="#e07b50" />
+    <meta name="twitter:site" content="@LeezaSarwar" />
+    <meta name="twitter:title" content="Leeza Sarwar App" />
+    <meta name="twitter:description" content="Built with love by Leeza Sarwar." />
+    <meta name="twitter:image" content="https://leezaportfolio.vercel.app/og-image.png" />
+
+    <!-- Favicon (optional – add your icon in public folder) -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
 
   <body>
