--- a/index.html
+++ b/index.html
@@ -5,26 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Website Title -->
-    <title>Leeza Sarwar App</title>
+    <title>SocialSpark – Connect & Share</title>
 
     <!-- SEO Meta -->
-    <meta name="description" content="Official web application built by Leeza Sarwar." />
+    <meta
+      name="description"
+      content="SocialSpark is a modern full stack social media platform to connect, share posts, and interact globally."
+    />
     <meta name="author" content="Leeza Sarwar" />
 
     <!-- Open Graph (Facebook / LinkedIn) -->
-    <meta property="og:title" content="Leeza Sarwar App" />
-    <meta property="og:description" content="A modern web application built with love by Leeza Sarwar." />
+    <meta property="og:title" content="SocialSpark – Connect & Share" />
+    <meta
+      property="og:description"
+      content="A full stack social media platform built with love by Leeza Sarwar."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://leezaportfolio.vercel.app/og-image.png" />
+    <meta
+      property="og:image"
+      content="https://socialspark-roan.vercel.app/og-image.png"
+    />
+    <meta
+      property="og:url"
+      content="https://socialspark-roan.vercel.app/"
+    />
 
     <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@LeezaSarwar" />
-    <meta name="twitter:title" content="Leeza Sarwar App" />
-    <meta name="twitter:description" content="Built with love by Leeza Sarwar." />
-    <meta name="twitter:image" content="https://leezaportfolio.vercel.app/og-image.png" />
+    <meta name="twitter:title" content="SocialSpark – Connect & Share" />
+    <meta
+      name="twitter:description"
+      content="Connect, share, and interact on SocialSpark. Built by Leeza Sarwar."
+    />
+    <meta
+      name="twitter:image"
+      content="https://socialspark-roan.vercel.app/og-image.png"
+    />
 
-    <!-- Favicon (optional – add your icon in public folder) -->
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
 
