--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
       property="og:image"
       content="https://socialspark-roan.vercel.app/og-image.png"
     />
-    <meta
-      property="og:url"
-      content="https://socialspark-roan.vercel.app/"
-    />
+    <meta property="og:url" content="https://socialspark-roan.vercel.app/" />
 
     <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -44,7 +41,10 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- Agar aapke public folder mein favicon.ico hai -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <!-- Agar aapke public folder mein PNG hai to ye use karein -->
+    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
   </head>
 
   <body>
