--- a/index.html
+++ b/index.html
@@ -5,46 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Website Title -->
-    <title>SocialSpark – Connect & Share</title>
+    <title>Leeza Sarwar | Full Stack Web Developer</title>
 
     <!-- SEO Meta -->
     <meta
       name="description"
-      content="SocialSpark is a modern full stack social media platform to connect, share posts, and interact globally."
+      content="Portfolio of Leeza Sarwar, a Full Stack Web Developer showcasing modern web projects, skills, and experience."
     />
     <meta name="author" content="Leeza Sarwar" />
 
-    <!-- Open Graph (Facebook / LinkedIn) -->
-    <meta property="og:title" content="SocialSpark – Connect & Share" />
+    <!-- Open Graph (LinkedIn / Facebook) -->
+    <meta property="og:title" content="Leeza Sarwar | Full Stack Web Developer" />
     <meta
       property="og:description"
-      content="A full stack social media platform built with love by Leeza Sarwar."
+      content="Explore projects, skills, and experience of Leeza Sarwar – Full Stack Web Developer."
     />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://socialspark-roan.vercel.app/og-image.png"
+      content="https://leezaportfolio.vercel.app/og-image.png"
     />
-    <meta property="og:url" content="https://socialspark-roan.vercel.app/" />
+    <meta
+      property="og:url"
+      content="https://leezaportfolio.vercel.app/"
+    />
 
     <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@LeezaSarwar" />
-    <meta name="twitter:title" content="SocialSpark – Connect & Share" />
+    <meta
+      name="twitter:title"
+      content="Leeza Sarwar | Full Stack Web Developer"
+    />
     <meta
       name="twitter:description"
-      content="Connect, share, and interact on SocialSpark. Built by Leeza Sarwar."
+      content="Portfolio of Leeza Sarwar – Full Stack Web Developer."
     />
     <meta
       name="twitter:image"
-      content="https://socialspark-roan.vercel.app/og-image.png"
+      content="https://leezaportfolio.vercel.app/og-image.png"
     />
 
     <!-- Favicon -->
-    <!-- Agar aapke public folder mein favicon.ico hai -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <!-- Agar aapke public folder mein PNG hai to ye use karein -->
-    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
+    <link rel="icon" href="/favicon.ico" />
   </head>
 
   <body>
